# projetoDsTardeTurmaAB

./: .gitignore  README.md  app.json  et --hard HEAD~2  package-lock.json  package.json  participacao.html  requirements.txt
.expo/: settings.json
.github/workflows/: CI-Backend.yml  CI-Frontend.yml  CI-front.yml  Work.yaml  expo-doctor.yml  participacao.yml
Arquivos do figma/commits-externos/: README.md
Arquivos do figma/links figma e login/: LinkFigma2.txt  link.txt
Relatórios de bug e erro/: README.txt
back/: pyproject.toml
back/src/: index.py
back/src/infra/controllers/: create-user.py
backend/: .env  README.md  docker-compose.yml  dockerfile  requirements.txt  runServer.sh
backend/app/: main.py  models.py
backend/app/db/: fake_db.py  supabase_client.py
backend/app/routers/: artists.py  music.py  test_create_music.py  test_create_user.py  (+10 more)
backend/database/: SingerSwipe.sql
backend/exemplos_de_router_com_conexao_ao_servidor_supabase/: mostrarDelete.py  mostrarInsert.py  mostrarSelect.py  mostrarUpdate.py  mostrarUpload.py
backend/services/: Log.py  helper.py  popular.py  recommend.py  usersJoin.py
documents/: link.txt  loginNome.md
documents/Swiper/: README.md
documents/links figma e login/: link figma oficial
frontend/: dockerfile  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/app/: Configuracoes.jsx  Swipes.jsx  _layout.jsx  avatar-perfil.jsx  cadastrar.jsx  curtidas.jsx  home.jsx  index.jsx  perfil.jsx  selectGenero.jsx  telaPerfil.jsx  uploadMusic.jsx
scripts/: participacao.py
(+6 files in other folders)
