[project]
name = "back"
version = "0.1.0"
description = ""
authors = [
    {name = "NatanRib12",email = "natansantosribeiro241@gmail.com"},
    {name = "freit4sdev",email = "chelmizinho@gmail.com"},
    {name = "gkfgis",email = "matheusdapoia@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
